--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.eccard.conquer.ui.main.MainActivity" />
         </activity>
+        <activity android:name=".ui.timesheet.TimeSheetActivity" />
     </application>
 
 </manifest>
