--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@
  *  limitations under the License
  */
 
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
 apply from: '../config/quality/quality.gradle'
 
@@ -114,6 +115,10 @@ dependencies {
     // view model
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycleVersion"
+
+    // Crashlytics
+    implementation "com.google.firebase:firebase-core:$rootProject.firebaseVersion"
+    implementation "com.crashlytics.sdk.android:crashlytics:$rootProject.crashLyticsVersion"
 }
 
 configurations.all {
