--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,16 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+
+        // Crashlytics
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.26.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -75,4 +82,9 @@ ext {
     junitVersion = '4.12'
     espressoVersion = '3.1.0'
     mockitoVersion = '2.15.0'
+
+    // Crashlytics
+    firebaseVersion = '16.0.8'
+    crashLyticsVersion ='2.9.9'
+
 }
