--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@
 
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply from: '../config/quality/quality.gradle'
 
 android {
