--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,8 @@ dependencies {
     // Crashlytics
     implementation "com.google.firebase:firebase-core:$rootProject.firebaseVersion"
     implementation "com.crashlytics.sdk.android:crashlytics:$rootProject.crashLyticsVersion"
+
+    implementation "com.google.android.gms:play-services-analytics:$rootProject.firebaseVersion"
 }
 
 configurations.all {
